tests/ok/for-vector.ari
fn main() -> i64 {
  var total = 0;
  for value in [1, 2, 3, 4, 5] {
    if value == 2 {
      continue;
    }
    if value == 5 {
      break;
    }
    total = total + value;
  }
  for _ in [10, 20] {
    total = total + 1;
  }
  return total;
}
