tests/errors/aggregate-borrow-source-assign.ari
fn main() -> i64 {
  var number = 1;
  let borrowed = (ref number, 2);
  number = 3;
  return number;
}
